--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,12 @@
-# Compiled Lua sources
-luac.out
+# "To Do" files
+*.ymp.todo
 
-# luarocks build files
-*.src.rock
-*.zip
-*.tar.gz
+# Description files of other files
+*.ymp.desc
+*.ymp.description
 
-# Object files
-*.o
-*.os
-*.ko
-*.obj
-*.elf
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-*.def
-*.exp
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
+# Library Configuration files
+*.ymp.lib.config
+*.ymp.library.config
+*.ymp.lib.configuration
+*.ymp.library.configuration
