--- a/.env
+++ b/.env
@@ -6,5 +6,8 @@
 # This Repo ID is real.
 REPO_ID = "R_kgDOQcfeGg"
 
+JPMOD = "ヤンザリのモ・ポリ"
+JPCREATOR = "ヤンザリ"
+
 # If you want to be a hacker to access my private information, you're out of luck here. Please, if you want to talk to me, use my public email.
-# —by Yanzari
+# —by ヤンザリ(Yanzari)
