I put things in Japanese. Again

--- a/.env
+++ b/.env
@@ -2,12 +2,12 @@
 # This file will not have credentials for OBVIOUS security reasons.
 # I have no idea what to put here. 🙂
 # I only knew one thing: I will NEVER put up any credentials.
+# 資格情報がありません!!!!!
 
 # This Repo ID is real.
+# Please do not change this Repo ID.
 REPO_ID = "R_kgDOQcfeGg"
 
-JPMOD = "ヤンザリのモ・ポリ"
-JPCREATOR = "ヤンザリ"
-
 # If you want to be a hacker to access my private information, you're out of luck here. Please, if you want to talk to me, use my public email.
+# —by ヤンザリ(Yanzari)すが、いくつかを日本語に翻訳しました。
 # —by ヤンザリ(Yanzari)
