More stuff for the .env file, lol

--- a/.env
+++ b/.env
@@ -6,8 +6,22 @@
 
 # This Repo ID is real.
 # Please do not change this Repo ID.
+# このリポジトリ ID はこのリポジトリに属します。
 REPO_ID = "R_kgDOQcfeGg"
 
-# If you want to be a hacker to access my private information, you're out of luck here. Please, if you want to talk to me, use my public email.
-# —by ヤンザリ(Yanzari)すが、いくつかを日本語に翻訳しました。
+# If you wanted to hack me, you'll have to cry in the shower, lol
+# ハッカーならシャワーで泣けよ（笑）
+# 臭いハッカー
+
+# このリポジトリの ID が必要な場合は、一番上に記載されています。それだけです。
+
+# If you want to be a hacker to access my private information, you're out of luck here. Please, if you want to talk to me, use my public email, Don't contact me through my private emails.
+# My public email address is this one: srb2.workshop.yanzari@gmail.com
+# I only use it for cases where someone wants to talk to me.
+# プライベート API キーやプライベート トークンなどが必要な場合、幸運な人はいません。
+
+# 貢献についての情報が必要な場合は、.github/CONTRIBUTION.md に必要な情報が記載されています。
+# If you are a Japanese hacker, my private token is "Уара_уқәҿиара_уцәыӡит_ари_сара_стәыҵәҟьа_акәӡам_уара_аҟьашь"
+# I hope you don't use my private token, lol.
+
 # —by ヤンザリ(Yanzari)
